Stop egw hamburger menu from overlapping course select on video page

--- a/templates/mobile/app.less
+++ b/templates/mobile/app.less
@@ -7,8 +7,24 @@ form[id^="smallpart-student-index"] {
       display: flex;
     }
     td.leftBoxArea, td.sidebox_mode_comments {display: flex; width:100% !important;}
-    et2-select#smallpart-student-index_courses {
+
+	et2-select#smallpart-student-index_courses {
       padding-left: 60px;
     }
+  }
+}
+
+tr.video_list {
+  td > div {
+	display: flex;
+	flex-wrap: nowrap;
+
+	.et2_toolbar {
+	  display: inline-flex;
+	}
+  }
+
+  et2-select#smallpart-start_courses {
+	padding-left: 60px;
   }
 }
